--- a/notebooks/survival_models.ipynb
+++ b/notebooks/survival_models.ipynb
@@ -352,7 +352,7 @@
           "height": 206
         },
         "id": "orUVzFo7_eQM",
-        "outputId": "2fa448e1-36ca-4697-9804-03a0dccf701e"
+        "outputId": "d41e5aab-299d-499b-cf02-9b94f0678763"
       },
       "execution_count": 10,
       "outputs": [
@@ -369,7 +369,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d487bc05-9d26-4357-a255-55295e40ed1d\">\n",
+              "  <div id=\"df-3083a40d-4173-47f9-8173-59312012dae7\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -446,7 +446,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d487bc05-9d26-4357-a255-55295e40ed1d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3083a40d-4173-47f9-8173-59312012dae7')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -497,12 +497,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-d487bc05-9d26-4357-a255-55295e40ed1d button.colab-df-convert');\n",
+              "          document.querySelector('#df-3083a40d-4173-47f9-8173-59312012dae7 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-d487bc05-9d26-4357-a255-55295e40ed1d');\n",
+              "          const element = document.querySelector('#df-3083a40d-4173-47f9-8173-59312012dae7');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -540,7 +540,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jwIEwT3I_lt4",
-        "outputId": "55cafc47-07de-4874-b176-a685004be637"
+        "outputId": "13e7fabc-c462-4298-a5c3-6e877f72ab24"
       },
       "execution_count": 11,
       "outputs": [
@@ -570,16 +570,15 @@
     {
       "cell_type": "code",
       "source": [
-        "def cstat_caculation(km, risk, status, tau, time):\n",
-        "  risk = risk[status]\n",
-        "  time = time[status]\n",
-        "  \n",
+        "def cstat_caculation(km, risk, status, tau, time):  \n",
         "  n = len(risk)\n",
         "  upper = 0\n",
         "  lower = 0\n",
         "\n",
         "  for i in range(n):\n",
-        "    ti, ri = time[i], risk[i]\n",
+        "    di, ti, ri = status[i], time[i], risk[i]\n",
+        "    if not di:\n",
+        "      continue\n",
         "\n",
         "    for j in range(n):\n",
         "      tj, rj = time[j], risk[j]\n",
@@ -674,7 +673,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3KGxY4EmtKIA",
-        "outputId": "23c64f2b-f2eb-41d5-93c7-6b3910bb0e4e"
+        "outputId": "066dda47-cb6b-45c0-ecef-cb558ea0caf7"
       },
       "execution_count": 16,
       "outputs": [
@@ -682,7 +681,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.7335858344770059"
+              "0.719673548658439"
             ]
           },
           "metadata": {},
@@ -700,7 +699,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l1xiO2CCtISz",
-        "outputId": "79844683-e23c-4583-bb40-35fbd7eb3bc8"
+        "outputId": "00c848b4-4da1-4d1a-a426-79ac7ef9bf55"
       },
       "execution_count": 17,
       "outputs": [
@@ -708,7 +707,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.6939865159944297"
+              "0.7056980962797231"
             ]
           },
           "metadata": {},
@@ -785,7 +784,7 @@
       "metadata": {
         "id": "yi38MO0jthLo"
       },
-      "execution_count": 72,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -851,7 +850,7 @@
       "metadata": {
         "id": "HyD6ZqDxXqji"
       },
-      "execution_count": 73,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -874,7 +873,7 @@
       "metadata": {
         "id": "z7iWpxnvlfyn"
       },
-      "execution_count": 53,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -911,7 +910,7 @@
       "metadata": {
         "id": "GQ8C8Eh4sQ1u"
       },
-      "execution_count": 54,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -944,7 +943,7 @@
       "metadata": {
         "id": "7KFYSWDHoL9j"
       },
-      "execution_count": 55,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -972,7 +971,7 @@
       "metadata": {
         "id": "szLhusBhz1gH"
       },
-      "execution_count": 38,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -992,7 +991,7 @@
       "metadata": {
         "id": "dtG8B39gcV5n"
       },
-      "execution_count": 39,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -1022,7 +1021,7 @@
       "metadata": {
         "id": "duPYjEi0rxxF"
       },
-      "execution_count": 74,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -1035,7 +1034,7 @@
       "metadata": {
         "id": "-IkRxa2epVyd"
       },
-      "execution_count": 75,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -1052,7 +1051,7 @@
       "metadata": {
         "id": "B_4qJ41CwwoQ"
       },
-      "execution_count": 76,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -1066,7 +1065,7 @@
       "metadata": {
         "id": "ISkkdGmY0oJx"
       },
-      "execution_count": 77,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -1085,24 +1084,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G0HNR-Eg0wc3",
-        "outputId": "2aa120ef-23cd-4a14-b693-f240795ebcc0"
+        "outputId": "d6ef2acc-1b74-456d-df0c-4ac24000cb81"
       },
-      "execution_count": 78,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 10, validation cstat: 0.6282\n",
-            "Epoch 11, validation cstat: 0.6327\n",
-            "Epoch 12, validation cstat: 0.6353\n",
-            "Epoch 13, validation cstat: 0.6405\n",
-            "Epoch 14, validation cstat: 0.6453\n",
-            "Epoch 15, validation cstat: 0.6493\n",
-            "Epoch 16, validation cstat: 0.6533\n",
-            "Epoch 17, validation cstat: 0.6546\n",
-            "Epoch 18, validation cstat: 0.6569\n",
-            "Epoch 19, validation cstat: 0.6583\n"
+            "Epoch 10, validation cstat: 0.5684\n",
+            "Epoch 11, validation cstat: 0.5753\n",
+            "Epoch 12, validation cstat: 0.5818\n",
+            "Epoch 13, validation cstat: 0.5883\n",
+            "Epoch 14, validation cstat: 0.5953\n",
+            "Epoch 15, validation cstat: 0.6030\n",
+            "Epoch 16, validation cstat: 0.6088\n",
+            "Epoch 17, validation cstat: 0.6130\n",
+            "Epoch 18, validation cstat: 0.6167\n",
+            "Epoch 19, validation cstat: 0.6204\n"
           ]
         }
       ]
@@ -1119,24 +1118,24 @@
           "height": 206
         },
         "id": "uK2wgJNs8wcw",
-        "outputId": "e9cf4ae6-3ed1-4860-f283-b341eae06593"
+        "outputId": "08170797-837c-4317-d9b9-71e272793e0b"
       },
-      "execution_count": 80,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "   epoch     cstat\n",
-              "0     10  0.628188\n",
-              "1     11  0.632660\n",
-              "2     12  0.635272\n",
-              "3     13  0.640523\n",
-              "4     14  0.645300"
+              "0     10  0.568373\n",
+              "1     11  0.575287\n",
+              "2     12  0.581795\n",
+              "3     13  0.588260\n",
+              "4     14  0.595299"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-dc3e78a4-546b-43cf-903f-104743a6e219\">\n",
+              "  <div id=\"df-3d556144-e61d-4691-91d2-85b521a88155\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1164,32 +1163,32 @@
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>10</td>\n",
-              "      <td>0.628188</td>\n",
+              "      <td>0.568373</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>11</td>\n",
-              "      <td>0.632660</td>\n",
+              "      <td>0.575287</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>12</td>\n",
-              "      <td>0.635272</td>\n",
+              "      <td>0.581795</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>13</td>\n",
-              "      <td>0.640523</td>\n",
+              "      <td>0.588260</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>14</td>\n",
-              "      <td>0.645300</td>\n",
+              "      <td>0.595299</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dc3e78a4-546b-43cf-903f-104743a6e219')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3d556144-e61d-4691-91d2-85b521a88155')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1240,12 +1239,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-dc3e78a4-546b-43cf-903f-104743a6e219 button.colab-df-convert');\n",
+              "          document.querySelector('#df-3d556144-e61d-4691-91d2-85b521a88155 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-dc3e78a4-546b-43cf-903f-104743a6e219');\n",
+              "          const element = document.querySelector('#df-3d556144-e61d-4691-91d2-85b521a88155');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1268,7 +1267,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 80
+          "execution_count": 30
         }
       ]
     },
@@ -1284,81 +1283,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# Model.\n",
-        "model = linear_model()"
-      ],
-      "metadata": {
-        "id": "4zcKBn1r55RU"
-      },
-      "execution_count": 440,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "model.compile(\n",
-        "  optimizer=tf.keras.optimizers.Adam(),\n",
-        "  loss=CoxLoss()\n",
-        ")"
-      ],
-      "metadata": {
-        "id": "nLnz4AJW5x4V"
-      },
-      "execution_count": 441,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "data_generator = DataGenerator(data[\"x\"], data[\"y\"])\n",
-        "ds = data_generator()"
-      ],
-      "metadata": {
-        "id": "TVvJ2TceCa1B"
-      },
-      "execution_count": 442,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Training dataset.\n",
-        "history = model.fit(\n",
-        "  x=ds,\n",
-        "  epochs=2,\n",
-        ")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "14H8mjPq5O4o",
-        "outputId": "319d385c-fcfd-4485-9887-a9376c4d57e2"
-      },
-      "execution_count": 443,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch 1/2\n",
-            "10/10 [==============================] - 1s 7ms/step - loss: 3.9035\n",
-            "Epoch 2/2\n",
-            "10/10 [==============================] - 0s 6ms/step - loss: 3.8898\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# Training and validation datasets.\n",
         "ds = prep_datasets(data_fn.get_split_data())"
       ],
       "metadata": {
         "id": "caqWAvhbDlaT"
       },
-      "execution_count": 449,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -1376,18 +1307,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0pp1505xKXZR",
-        "outputId": "f594132e-90cb-40f8-8e7d-5ebfb520f7d2"
+        "outputId": "c80f637f-cd5c-42c0-8b8d-08fbb77b8194"
       },
-      "execution_count": 451,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/2\n",
-            "6/6 [==============================] - 1s 149ms/step - loss: 3.8563 - val_loss: 3.9292\n",
+            "6/6 [==============================] - 1s 84ms/step - loss: 3.9793 - val_loss: 3.9728\n",
             "Epoch 2/2\n",
-            "6/6 [==============================] - 0s 15ms/step - loss: 3.8491 - val_loss: 3.9227\n"
+            "6/6 [==============================] - 0s 13ms/step - loss: 3.9683 - val_loss: 3.9664\n"
           ]
         }
       ]
@@ -1403,26 +1334,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XK6dnmiXKqB-",
-        "outputId": "4783b4b6-fa42-4817-c833-5d12ddd95b97"
+        "outputId": "659d0653-79a8-4234-f949-022128bfe9fc"
       },
-      "execution_count": 452,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2/2 [==============================] - 0s 46ms/step - loss: 3.8848\n"
+            "2/2 [==============================] - 0s 24ms/step - loss: 3.8438\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "3.884826898574829"
+              "3.8437955379486084"
             ]
           },
           "metadata": {},
-          "execution_count": 452
+          "execution_count": 38
         }
       ]
     },
