Update to Cox loss

--- a/notebooks/survival_models.ipynb
+++ b/notebooks/survival_models.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [],
       "toc_visible": true
     },
     "kernelspec": {
@@ -18,7 +17,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "hIBg7AfF6Mnx"
       },
@@ -50,7 +49,7 @@
       "metadata": {
         "id": "TGTspMD3dys9"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -106,7 +105,7 @@
       "metadata": {
         "id": "0nGaPZhy6RHQ"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -137,7 +136,7 @@
       "metadata": {
         "id": "WiBMyLRfA9Hw"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -180,7 +179,7 @@
       "metadata": {
         "id": "yE97Bl7wgxr-"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -231,7 +230,7 @@
       "metadata": {
         "id": "9hoeDEeEBSYP"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -254,7 +253,7 @@
       "metadata": {
         "id": "ao4KzS4fcGRu"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -301,7 +300,7 @@
       "metadata": {
         "id": "3MvKcTRA5j7Y"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -333,7 +332,7 @@
       "metadata": {
         "id": "bp-kQa8Qz_Q1"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -352,9 +351,9 @@
           "height": 206
         },
         "id": "orUVzFo7_eQM",
-        "outputId": "d41e5aab-299d-499b-cf02-9b94f0678763"
+        "outputId": "679ab7cb-94f2-4427-e357-b39d1930786a"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -369,7 +368,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3083a40d-4173-47f9-8173-59312012dae7\">\n",
+              "  <div id=\"df-fd5fea65-59a7-4554-ae5b-1679c23d9d37\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -446,7 +445,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3083a40d-4173-47f9-8173-59312012dae7')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fd5fea65-59a7-4554-ae5b-1679c23d9d37')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -497,12 +496,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-3083a40d-4173-47f9-8173-59312012dae7 button.colab-df-convert');\n",
+              "          document.querySelector('#df-fd5fea65-59a7-4554-ae5b-1679c23d9d37 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-3083a40d-4173-47f9-8173-59312012dae7');\n",
+              "          const element = document.querySelector('#df-fd5fea65-59a7-4554-ae5b-1679c23d9d37');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -540,9 +539,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jwIEwT3I_lt4",
-        "outputId": "13e7fabc-c462-4298-a5c3-6e877f72ab24"
+        "outputId": "09a87024-5d60-4cc9-a92f-f3a140145b08"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -594,7 +593,7 @@
       "metadata": {
         "id": "Sq8o61DGkwYt"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -628,7 +627,7 @@
       "metadata": {
         "id": "HqdSaYhFBmmQ"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -649,7 +648,7 @@
       "metadata": {
         "id": "E8y0Ih8VrZJU"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -660,7 +659,7 @@
       "metadata": {
         "id": "x6_OxYJfrfVv"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -673,15 +672,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3KGxY4EmtKIA",
-        "outputId": "066dda47-cb6b-45c0-ecef-cb558ea0caf7"
+        "outputId": "2ec6f155-11c3-48d7-a63b-84b1ddf3b7f6"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.719673548658439"
+              "0.7507647088771979"
             ]
           },
           "metadata": {},
@@ -699,15 +698,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l1xiO2CCtISz",
-        "outputId": "00c848b4-4da1-4d1a-a426-79ac7ef9bf55"
+        "outputId": "638d3fbb-f098-4ad1-d7c6-03f51cbd6fd1"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.7056980962797231"
+              "0.8100961454298465"
             ]
           },
           "metadata": {},
@@ -784,7 +783,7 @@
       "metadata": {
         "id": "yi38MO0jthLo"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -819,6 +818,11 @@
         "    \n",
         "    # Note: autograph requires unpacking using indices.\n",
         "    status = tf.cast(y_true[:, 0], dtype=bool)\n",
+        "\n",
+        "    # Absent any events in the batch, there is no loss contribution.\n",
+        "    if not tf.math.reduce_any(status):\n",
+        "      return tf.constant(0.0, dtype=tf.float32)\n",
+        "\n",
         "    time = tf.cast(y_true[:, 1], dtype=tf.float32)\n",
         "    y_pred = tf.cast(y_pred, tf.float32)\n",
         "    # assert status.shape == time.shape\n",
@@ -850,7 +854,7 @@
       "metadata": {
         "id": "HyD6ZqDxXqji"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -873,7 +877,7 @@
       "metadata": {
         "id": "z7iWpxnvlfyn"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -910,7 +914,7 @@
       "metadata": {
         "id": "GQ8C8Eh4sQ1u"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -943,7 +947,7 @@
       "metadata": {
         "id": "7KFYSWDHoL9j"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -971,7 +975,7 @@
       "metadata": {
         "id": "szLhusBhz1gH"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -991,7 +995,7 @@
       "metadata": {
         "id": "dtG8B39gcV5n"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1021,7 +1025,7 @@
       "metadata": {
         "id": "duPYjEi0rxxF"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1034,7 +1038,7 @@
       "metadata": {
         "id": "-IkRxa2epVyd"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1051,7 +1055,7 @@
       "metadata": {
         "id": "B_4qJ41CwwoQ"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1065,7 +1069,7 @@
       "metadata": {
         "id": "ISkkdGmY0oJx"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1084,24 +1088,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G0HNR-Eg0wc3",
-        "outputId": "d6ef2acc-1b74-456d-df0c-4ac24000cb81"
+        "outputId": "29286168-6fb5-4c1c-90df-35d8e0d6f6e4"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 10, validation cstat: 0.5684\n",
-            "Epoch 11, validation cstat: 0.5753\n",
-            "Epoch 12, validation cstat: 0.5818\n",
-            "Epoch 13, validation cstat: 0.5883\n",
-            "Epoch 14, validation cstat: 0.5953\n",
-            "Epoch 15, validation cstat: 0.6030\n",
-            "Epoch 16, validation cstat: 0.6088\n",
-            "Epoch 17, validation cstat: 0.6130\n",
-            "Epoch 18, validation cstat: 0.6167\n",
-            "Epoch 19, validation cstat: 0.6204\n"
+            "Epoch 10, validation cstat: 0.6154\n",
+            "Epoch 11, validation cstat: 0.6243\n",
+            "Epoch 12, validation cstat: 0.6317\n",
+            "Epoch 13, validation cstat: 0.6377\n",
+            "Epoch 14, validation cstat: 0.6433\n",
+            "Epoch 15, validation cstat: 0.6483\n",
+            "Epoch 16, validation cstat: 0.6538\n",
+            "Epoch 17, validation cstat: 0.6597\n",
+            "Epoch 18, validation cstat: 0.6634\n",
+            "Epoch 19, validation cstat: 0.6674\n"
           ]
         }
       ]
@@ -1118,24 +1122,24 @@
           "height": 206
         },
         "id": "uK2wgJNs8wcw",
-        "outputId": "08170797-837c-4317-d9b9-71e272793e0b"
+        "outputId": "12828faf-8c24-4f75-fcea-6ca16e507c05"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "   epoch     cstat\n",
-              "0     10  0.568373\n",
-              "1     11  0.575287\n",
-              "2     12  0.581795\n",
-              "3     13  0.588260\n",
-              "4     14  0.595299"
+              "0     10  0.615362\n",
+              "1     11  0.624278\n",
+              "2     12  0.631735\n",
+              "3     13  0.637717\n",
+              "4     14  0.643315"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3d556144-e61d-4691-91d2-85b521a88155\">\n",
+              "  <div id=\"df-a57fd06a-0bd2-43d1-8c81-07e9023cdf8c\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1163,32 +1167,32 @@
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>10</td>\n",
-              "      <td>0.568373</td>\n",
+              "      <td>0.615362</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>11</td>\n",
-              "      <td>0.575287</td>\n",
+              "      <td>0.624278</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>12</td>\n",
-              "      <td>0.581795</td>\n",
+              "      <td>0.631735</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>13</td>\n",
-              "      <td>0.588260</td>\n",
+              "      <td>0.637717</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>14</td>\n",
-              "      <td>0.595299</td>\n",
+              "      <td>0.643315</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3d556144-e61d-4691-91d2-85b521a88155')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a57fd06a-0bd2-43d1-8c81-07e9023cdf8c')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1239,12 +1243,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-3d556144-e61d-4691-91d2-85b521a88155 button.colab-df-convert');\n",
+              "          document.querySelector('#df-a57fd06a-0bd2-43d1-8c81-07e9023cdf8c button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-3d556144-e61d-4691-91d2-85b521a88155');\n",
+              "          const element = document.querySelector('#df-a57fd06a-0bd2-43d1-8c81-07e9023cdf8c');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1289,7 +1293,7 @@
       "metadata": {
         "id": "caqWAvhbDlaT"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1307,18 +1311,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0pp1505xKXZR",
-        "outputId": "c80f637f-cd5c-42c0-8b8d-08fbb77b8194"
+        "outputId": "53955896-aaa8-4a41-d62f-901b8ad0fd32"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/2\n",
-            "6/6 [==============================] - 1s 84ms/step - loss: 3.9793 - val_loss: 3.9728\n",
+            "6/6 [==============================] - 1s 157ms/step - loss: 3.6709 - val_loss: 3.7550\n",
             "Epoch 2/2\n",
-            "6/6 [==============================] - 0s 13ms/step - loss: 3.9683 - val_loss: 3.9664\n"
+            "6/6 [==============================] - 0s 16ms/step - loss: 3.6686 - val_loss: 3.7533\n"
           ]
         }
       ]
@@ -1334,26 +1338,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XK6dnmiXKqB-",
-        "outputId": "659d0653-79a8-4234-f949-022128bfe9fc"
+        "outputId": "ca261701-14ea-4adc-b47b-2601c8800758"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2/2 [==============================] - 0s 24ms/step - loss: 3.8438\n"
+            "2/2 [==============================] - 0s 29ms/step - loss: 3.7989\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "3.8437955379486084"
+              "3.798910140991211"
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 33
         }
       ]
     },
